# agro_tools

./: README.md  pyproject.toml  requirements.txt
src/agro_tools/: Untitled-2.md  available_water_capacity.py  photoperiod.py  translate_temperature.py  vapor_pressure_deficit.py
src/agro_tools/evapotranspiration/: base.py  thornthwaite_mather.py
src/agro_tools/helpers/: photoperiod.py  utils.py
src/agro_tools/water_balance/: normal.py
tests/: available_water_capacity_test.py  misc_test.py  photoperiod_test.py  translate_temperature_test.py  vapor_pressure_deficit_test.py
tests/evapotranspiration/: thornthwaite_mather_test.py
tests/water_balance/: normal_test.py
